# pyarpg

./: README.md  pyproject.toml
src/: main.py
src/pyarpg/: animation_test.py  assets.py  config.py  curves_test.py  enemies.py  level.py  main.py  pickups.py  player.py  portals.py  scenes.py  skills.py  stats.py  ui.py  world.py
src/tools/: animator.py  animator_gpt_yikes.py
